--- a/ui/style.css
+++ b/ui/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
+    background-color: lightgrey;
     margin-top: 60px;
 }
 
@@ -22,8 +23,9 @@ body {
      .container {
              max-width: 800px;
              margin: 0 auto;
-             color: grey;
+             color: orange;
              font-family: sans-serif;
+             padding-top:60px;
              padding-left: 20px;
              padding-right: 20px;
      }
