--- a/ui/style.css
+++ b/ui/style.css
@@ -29,4 +29,16 @@ body {
              padding-left: 20px;
              padding-right: 20px;
      }
-
+     
+#wrapper
+{
+width: 474px;
+margin: 0px auto;
+background-color: #121212;
+opacity: 0.84;
+filter: alpha(opacity=84); /* For IE8 and earlier */
+border-top:3px solid #5BBF50;
+min-height: 450px;
+padding: 30px 0px;
+color: #bfbfbf;
+}
