--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
+    background-color: white;
     margin-top: 60px;
 }
 
@@ -23,7 +23,7 @@ body {
  .container {
    max-width: 800px;
    margin: 0 auto;
-             color: orange;
+             color: Black;
              font-family: sans-serif;
              padding-top:20px;
              padding-left: 20px;
