[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -42,11 +42,12 @@ min-height: 50px;
 padding: 10px 0px;
 color: #bfbfbf;
 }
+
 #wrapper2
 {
 width: 474px;
 margin: 0px auto;
-background-color: powderblue;
+background-color: grey;
 opacity: 0.84;
 filter: alpha(opacity=84); /* For IE8 and earlier */
 border-top:3px solid #5BBF50;
