--- a/ui/style.css
+++ b/ui/style.css
@@ -45,9 +45,9 @@ color: #bfbfbf;
 
 #wrapper2
 {
-width: 474px;
+width: 804px;
 margin: 0px auto;
-background-color: grey;
+background-color: white;
 opacity: 0.84;
 filter: alpha(opacity=84); /* For IE8 and earlier */
 border-top:3px solid #5BBF50;
