--- a/ui/style.css
+++ b/ui/style.css
@@ -33,25 +33,25 @@ body {
 #wrapper
 {
 width: 474px;
-margin: 0px auto;
+margin: 0 auto;
 background-color: #121212;
 opacity: 0.84;
 filter: alpha(opacity=84); /* For IE8 and earlier */
 border-top:3px solid #5BBF50;
 min-height: 50px;
-padding: 10px 0px;
+padding: 10px 0;
 color: #bfbfbf;
 }
 
 #wrapper2
 {
 width: 804px;
-margin: 0px auto;
+margin: 0 auto;
 background-color: white;
 opacity: 0.84;
 filter: alpha(opacity=84); /* For IE8 and earlier */
 border-top:3px solid #5BBF50;
 min-height: 50px;
-padding: 10px 0px;
-color: #bfbfbf;
+padding: 10px 0;
+color: black;
 }
