--- a/ui/style.css
+++ b/ui/style.css
@@ -45,13 +45,15 @@ color: #bfbfbf;
 
 #wrapper2
 {
-width: 804px;
+width: 704px;
 margin: 0 auto;
 background-color: white;
 opacity: 0.84;
 filter: alpha(opacity=84); /* For IE8 and earlier */
 border-top:3px solid #5BBF50;
 min-height: 50px;
-padding: 10px 0;
+padding-top:10px;
+padding-left: 10px;
+padding-right: 10px;
 color: black;
 }
