--- a/ui/style.css
+++ b/ui/style.css
@@ -57,8 +57,14 @@ padding-left: 10px;
 padding-right: 10px;
 color: black;
 }
-#textcomment
+#txtcomments
 {
     width:200px;
+}
+#content
+{
+    margin: 4px;
+    background-color: #121212;
+    
 }
 }
