[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -64,7 +64,5 @@ color: black;
 #content
 {
     margin: 4px;
-    background-color: #121212;
-    
-}
-}
+    background-color:rgb(255, 237, 133);
+  }
