--- a/ui/style.css
+++ b/ui/style.css
@@ -45,6 +45,7 @@ color: #bfbfbf;
 
 #wrapper2
 {
+  box-shadow: 2px 2px 12px 7px;
 margin: 0 auto;
 background-color: rgb(255, 215, 237);
 opacity: 0.84;
