[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -69,4 +69,5 @@ color: black;
     font-style: italic;
     font-size: 14px;
     font-family: 'Aguafina Script', cursive;
+     border: 25px solid red;
   }
