[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -68,6 +68,7 @@ color: black;
     filter: alpha(opacity=50); /* For IE8 and earlier */
     font-style: italic;
     font-size: 14px;
-    font-family: 'Aguafina Script', cursive;
+    font-family: 'Impact,Charcoal',sans-serif;
+    
      border: 25px solid red;
   }
