[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -100,4 +100,5 @@ color: black;
     clear: left;
     background-image: url(http://freedesignfile.com/upload/2016/04/Spring-sunlight-with-green-leaves-vector-background-05.jpg),url(http://freedesignfile.com/upload/2015/01/Halation-bubble-with-green-leaves-vector-background-06.jpg);
     background-position: left top,right bottom;
+    background-repeat: no-repeat, repeat;
   }
