[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -68,6 +68,15 @@ padding-right: 10px;
 color: black;
 
 }
+
+
+#heading{
+	text-align: center;
+	font-size: 48px;
+	font-weight:bold;
+	font-family: 'Almendra SC', serif;
+}
+
 #txtcomments
 {
     max-width: 504px;
