--- a/ui/style.css
+++ b/ui/style.css
@@ -70,6 +70,23 @@ color: black;
 }
 
 
+/* visited link */
+a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {
+    color: azure;
+     text-decoration: underline;
+}
+
+/* selected link */
+a:active {
+    color: blue;
+    text-decoration: underline;
+}
 #heading{
 	text-align: center;
 	font-size: 48px;
