--- a/ui/style_shop.css
+++ b/ui/style_shop.css
@@ -105,4 +105,9 @@ a {color: #2b2bf6;}
 	 display:inline-block;
 	  box-shadow: 0 0 13px 13px rgba(0, 140, 186, 0.5);
  }
+ 
+.img-medium :hover {
+    box-shadow: 0 0 13px 13px rgba(0, 140, 186, 0.5);
+}
+ 
 #footer {width:100%; height: 70px; 	margin: 0; padding: 0; border: 0; float: left; background: #000000; clear:both;}                            
