--- a/ui/style_shop.css
+++ b/ui/style_shop.css
@@ -106,7 +106,7 @@ a {color: #2b2bf6;}
 	  
  }
  
-.img-medium :hover {
+.img-medium img :hover {
     box-shadow: 0 0 13px 13px rgba(0, 140, 186, 0.5);
 }
  
